--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.1",
     "gulp-inject": "^4.2.0",
     "gulp-sass": "^3.1.0",
+    "gulp-watch": "^4.3.11",
     "wiredep": "^4.0.0"
   }
 }
