--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,8 @@
   ],
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
+    "iscroll": "^5.2.0",
     "fullpage.js": "^2.9.2",
     "progressbar.js":"^1.0.1"
-
   }
 }
